2.3 설치 및 실행 작업.